force-app/main/default/objects/Appointment__c/fields/Duration_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Minutes__c</fullName>
    <label>Duration in Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>