force-app/main/default/objects/Appointment__c/fields/Feedback_from_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Feedback_from_Buyer__c</fullName>
    <label>Feedback from Buyer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>