force-app/main/default/objects/Appointment__c/fields/Interest_level__c.field-meta.xml
<CustomField>
    <fullName>Interest_level__c</fullName>
    <label>Interest level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>