force-app/main/default/objects/Appointment__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <inlineHelpText>What&apos;s the purpose of the Appointment/meeting</inlineHelpText>
    <label>Purpose</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>