force-app/main/default/objects/Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Duration_in_Minutes__c</columns>
    <columns>Status__c</columns>
    <columns>Feedback_from_Buyer__c</columns>
    <columns>Interest_level__c</columns>
    <columns>Follow_up_required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>